<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">I.I.S.S. \"C. E. Gadda\"</string>
    <string name="EnglishLanguageSelected">English</string>
    <string name="RussianLanguageSelected">Russian</string>
    <string name="ItalianLanguageSelected">Italian</string>
    <string name="La_nostra_storia">Our story</string>
    <string name="action_settings">Settings</string>
    <string name="StorySchool">The Institute was founded in 1973/1974 on two main purposes:\n
    - to create in a dislocated area of our territory a
        secondary school offering different education options\n
    - to innovate by introducing some new courses and an experimental model of organization.\n
    The Institute was included by the Ministry of Public Administration
        among the school members of the National Plan of Information Technology.\n
In 1998 the Institute was named "Carlo Emilio Gadda" to show its
        double role in education both in human and scientific field.\n
In 2000, the Bardi Project was introduced with the objective of decentralizing the
        first two years of secondary school in the territory of Bardi.\n
In 2011 a Scientific and Technical Committee was instituted with some local companies.
        It is made up of some entrepreneurs and
teachers and it has a consultative and proactive function.\n
Since 2012 the school has been identified as Technical Professional Polo for
        Mechanics with deliberation of the Regional Commission of 17/12/2012.\n
Our school offers three study courses split in four branches:\n
“Liceo Scientifico opzione Scienze Applicate” is a course mainly focused
        on scientific subjects:\n
o Chemistry;\n
o Earth Science;\n
o Biology\n
o Latin studies are not expected and are substituted by IT studies.\n
    “Technical” course:\n
o Information technology :\n
Is a course focused on the achievement of IT and TLC skills.
The main subjects are:\n
Science and applied technology\n
Computer studies\n
o Economical course of Administration, Finance and Marketing:\n
This is a type of course focused on the study of business, economics,
        public relations with a degree in economics.\n
The main subjects are:\n
Law;\n
Political Economy;\n
Business Economics;\n
Two foreign languages\n
The final competences to be achieved are in banking, accountancy, sale and marketing fields.\n
    “Professional course”:\n
“MAT” is a type of course concentrated on the professional subjects where most
part of the lessons take place in laboratories.\n
It proposes two branches: electrical and mechanical.\n
    The Institute also offers the possibility to follow some
        extra-curricular courses in view of the achievement of some
        certifications recognized by the European Framework.\n;
The certifications proposed are:\n
- LANGUAGE CERTIFICATIONS: students can improve their knowledge
        certifying their competences in foreign languages.\n
For the English language:\n
PET (Preliminary English Test) level B1\n
FCE (First Certificate in English) level B2\n
For the French language:\n
DELF (Diplo\'me E\'tranger Langue Francaise) levels B1 and B2\n
- ECDL (European Computer Driving Licence): it allows to improve computer and IT software knowledge.\n
- CAD (Computer-Aided Drafting): it allows to improve IT drafting software knowledge.\n
Every year the Institute also offers students the possibility to have a
        school-work experience in local businesses, to encourage cooperative relationships
between school and working context.\n
Some classes are also engaged in drama modules completely developed in foreign languages.\n
The Institute organizes some full-immersion weeks at school or abroad to improve
        language skills in a real communicative
context.</string>
    <string name="main_menu_body">Back to menu</string>
    <string name="storyButton">Our story</string>
    <string name="specSectionButtonId">Study addresses</string>
    <string name="lyceum_button"> Lyceum</string>
    <string name="spec_IT_TLC_button">IT and TLC</string>
    <string name="spec_Economy_button">Economic</string>
    <string name="it_tlc_story">The IT course, in which the Gadda boasts
        thirty years of experience, provides a preparation of the
        scientific-technological that gives access to the University and allows you to use:\n
        in the industrial sector: the industry for the control of automated systems,
        the computer industry in general and software house\n
        in data processing centers\n
        in the free profession\n
    The Diploma in “Computer science and Telecommunications”:\n
        - he has specific expertise in the field of computer systems,
        information processing, applications, and techno-Web technologies,
        networks, and communications equipment;\n
        - has skills and knowledge that, according to the different joints,
        are turning to the analysis, design, installation and management of computer
        systems, databases, networks, computer systems, multimedia systems and transmission
        equipment, and rice-tion of signals;\n
        - skills oriented to the management of the lifecycle of the applications that can apply to
        the software: management - service-oriented - systems-dedicated “built-in”;\n
        - collaborates in the management of projects, operating within the framework of national
        and international regulations concerning the safety in all its meanings
        and protection of the information (“privacy”).\n
        Is able to:\n
        - collaborate, under the regulations, for the purposes of the
        occupational safety and environmental protection, and to intervene
        in the improvement of the quality of the products and in the production
        organization of enterprises;\n
        - collaborate in the planning of the activities of production systems,
        where to apply, ability to communicate and interact efficiently,
        both in writing and orally;\n
        - exercise, in contexts characterized mainly by a management
        team, a rational approach, conceptual and analytical,
        oriented to the achievement of the objective, in the
        analysis and implementation of solutions;\n
        - use a advanced level of the English language to
        communicate in a professional environment characterized by strong internationalization;\n
        - define technical specifications, use, and write user manuals.\n
        STARTING FROM THE THIRD YEAR IS PROVIDED FOR THE JOINT "COMPUTER science": \n
        “Computer science”, in which it is in-depth analysis, comparison and design of
        devices and tools and the development of computer applications.</string>
    <string name="it_tlc_descriptor_img">it_tlc_descriptor</string>
    <string name="economical_descriptor">economical_descriptor</string>
    <string name="economical_story">The Diploma in the “Administration, Finance and Marketing”
        has general competence in the field of macro-phenomena of economic,
        national and international, of the civil law, and fiscal, systems, and
        processes of the enterprise (organization, planning, programming,
        administration, finance and control), marketing tools, products,
        insurance, financial and social economy. Integrates the skills of
        the professional domain specific languages and computer science to
        operate in the information system of the company and contribute both
        to the innovation is to improve the organization and technology of the
        company entered in an international context.\n
        Through the general path, you can:\n
        - Track operations management by using methods, tools, techniques,
        accounting and off-balance-sheet in line with the principles of
        national and international;\n
        - write and interpret documents the administrative and financial business;\n
        - manage compliance of a fiscal nature;\n
        - assist with contract negotiations related to the different functional areas of the company;\n
        - carry out marketing activities;\n
        - assist in the organization, management and control of business processes;\n
        - use technologies and software applications for the
        integrated management of administration, finance and marketing.</string>
    <string name="mech_elet_ImageView" translatable="false">mech_elet_assist_descriptor</string>
    <string name="mat_elet_story">The Diploma of vocational education in the
        address “Maintenance and technical assistance” has the skills to manage,
        organize and carry out installation and routine maintenance, diagnostic,
        repair, and testing of relatively small systems, equipment and technical
        devices, and also maritime. Its technical and professional skills are related
        to the sectors of the productive sectors in general (electronics, electrical
        engineering, mechanical engineering, heat engineering and others) and
        specifically developed in relation to the needs expressed by the community.\n
        Is able to:\n
        - check and repair during the life cycle of the equipment
        and facility, the compliance of their operation to the technical
        specifications and regulations on the safety of users and
        the protection of the environment;\n
        - observe the principles of ergonomics, safety and
        hygiene regulations governing the implementation of the interventions;\n
        - organize and participate in activities for the disposal of waste and residual
        substances, related to the operation of the machines,
        and for the disposal of the devices;\n
        - use the multi-disciplinary skills in the context of technological,
        economic and organisational present in the
        working processes, and services that involve;\n
        - functionally manage the inventory and the procedures for the procurement;\n
        - assist users and provide useful information on the
        proper use and operation of the devices;\n
        - acting in its scope of intervention in accordance with the
        specific regulations and take autonomous responsibility.\n

        Starting from the school year 2014/2015, the College of Teachers,
        in date 13/06/2014, has approved the curvature of the address on
        the "composite Materials" to respond to the demands arising from
        the productive fabric of the territory already accepted in the newborn Mechanic.</string>
    <string name="Email_to_send">Send feedback to Gadda staff…</string>
    <string name="Email_to_send_developer">Send feedback to Developer…</string>
    <string name="Email_body_text">Your message here…</string>
    <string name="send_email">Send e-mail</string>
    <string name="AboutApp">About app</string>
    <string name="dev_contact">Contact to Developer</string>
    <string name="economic_sector">Economic</string>
    <string name="it_tlc_sector">ICT</string>
    <string name="mec_elect_sector">Mechanical Electrical</string>
    <string name="dev_team">Dev Team</string>
    <string name="dev_team_list">
        - ALBERT CHARYIEV: Main assistance of head\n
    </string>
    <string name="head_of_project">ARNOL\'D CHARYYEV - Project leader</string>
    <string name="id">ID</string>
    <string name="news">news</string>
    <string name="link">link</string>
    <string name="email_contact_developer" translatable="false">vl80tk@gmail.com</string>
    <string name="mobilephone_contact_developer" translatable="false">+393462133945</string>
    <string name="vk_contact_developer" translatable="false">https://vk.com/arnold.charyyev</string>
    <string name="fb_contact_developer" translatable="false">https://www.facebook.com/schyzomaniac.mind</string>
    <string name="tw_contact_developer" translatable="false">https://twitter.com/arnold_online</string>
</resources>