<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/about_app"
            android:orderInCategory="1"
            android:icon="@mipmap/icon_about"
            android:title="@string/AboutApp"
            app:showAsAction="never" />
        <item
            android:id="@+id/subscribe"
            android:orderInCategory="2"
            android:icon="@mipmap/icon_subscribe_contact"
            android:title="@string/dev_contact"
            android:showAsAction="never" />
        <item
            android:id="@+id/dev_team"
            android:orderInCategory="3"
            android:icon="@mipmap/icon_dev_team"
            android:title="@string/dev_team"
            android:showAsAction="never" />
    </group>
</menu>
