<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/Email_to_send_developer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:gravity="top"
        android:hint="@string/Email_body_text"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/emailSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFFF33"
        android:text="@string/send_email" />


</LinearLayout>