<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MaintenanceAssistanceTechActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/matImageViewId"
                android:textColor="#000"
                android:textAllCaps="true"
                android:textSize="27.5dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/mech_elet_ImageView"
                android:text="@string/mec_elect_sector" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView"
                android:layout_gravity="center_horizontal"
                android:fillViewport="false"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/mat_elet_story"
                    android:id="@+id/lyceum_text" />
            </ScrollView>
        </LinearLayout>

    </RelativeLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.example.arnold.itsosgadda.handlers.NavigationDrawerFragment"
        tools:layout="@layout/drawer_main_navitagion_drawer" />
</android.support.v4.widget.DrawerLayout>